----------------------------------------------------------------------
 OmegaT 6.0.2
----------------------------------------------------------------------

  2 Enhancement
  7 Bug fixes
  0 Localisation updates
----------------------------------------------------------------------

  Implemented requests:

  - Various small documentation updates
  https://sourceforge.net/p/omegat/documentation/443/

  - Change the "break/exception" checkbox label
  https://sourceforge.net/p/omegat/feature-requests/484/

  Bug fixes:

  - Preferences/CustomColorSelector don't show notification immediately when modifying color
  https://sourceforge.net/p/omegat/bugs/1273/

  - tm/penalty-nnn value is not respected
  - FindMatcher always search separate segment match without penalty
  https://sourceforge.net/p/omegat/bugs/1248/
  https://sourceforge.net/p/omegat/bugs/1251/

  - [Revert regression] List of issues stays hidden in the background
  https://sourceforge.net/p/omegat/bugs/1225/

  - Unit tests failed on Windows
  https://sourceforge.net/p/omegat/bugs/1223/

  - Translation memories are not correctly reloaded after team synchronization
  https://sourceforge.net/p/omegat/bugs/1164/

  - pt-BR bundle typos
  https://sourceforge.net/p/omegat/bugs/1282/

  - macOS notarization fails with junixsocket libraries
  https://sourceforge.net/p/omegat/bugs/1283/

----------------------------------------------------------------------
 OmegaT 6.0.1 (2024-08-17)
----------------------------------------------------------------------
  0 Enhancement
 16 Bug fixes
  8 Localisation updates
----------------------------------------------------------------------
6.0.1 vs 6.0.0

  Bug fixes:

  - Removal of MED package save/load feature
  https://sourceforge.net/p/omegat/bugs/1266/

  - sdlxliff filter does not display (some) comments
  https://sourceforge.net/p/omegat/bugs/1244/

  - Windows launcher does not launch when without_JRE installer used
  https://sourceforge.net/p/omegat/bugs/1240/
