@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE root PUBLIC "-//OASIS//DTD//EN" "test.dtd">
+<root>
+  <body>
+  </body>
+</root>
